se eliminan proyectos y skills

--- a/src/views/portfolio.html
+++ b/src/views/portfolio.html
@@ -44,19 +44,6 @@
     </div>
     <div class="project">
       <div class="project-info">
-        <img src="../assets/img/basetool.png" alt="Geeky Shop - tienda virtual" />
-        <h2 class="titulo-h2">BaseTool</h2>
-        <p>
-          Herramienta que permite generar componentes, modulos y proyectos base
-          apartir de plantillas de codigo estandar
-        </p>
-      </div>
-      <div class="project-footer">
-        <p>Tecnología: Java SE 8, JavaFX</p>
-      </div>
-    </div>
-    <div class="project">
-      <div class="project-info">
         <img src="../assets/img/convertExcelToCsv.png" alt="Geeky Shop - tienda virtual" />
         <h2 class="titulo-h2">Convert Excel to CSV APP</h2>
         <p>
@@ -128,7 +115,23 @@
         </p>
       </div>
     </div>
-
+    <div class="project">
+      <div class="project-info">
+        <h2 class="titulo-h2">App web de certificados de reconocimientos</h2>
+        <p>
+          Aplicación web que permite generar un certificado a partir de un canvas y ciertos iconos seleccionados, con el
+          texto que el usuario desee agregar.
+        </p>
+      </div>
+      <div class="project-footer">
+        <p>Tecnología: NodeJs, MongoDb, Html, Css y Javascript</p>
+      </div>
+      <div class="project-capa">
+        <p>
+          <a href="https://www.reconocimiento.kagencia.com/" target="_BLANK"><i class="fas fa-eye"></i></a>
+        </p>
+      </div>
+    </div>
     <div class="project">
       <div class="project-info">
         <img src="../assets/img/blog_php.png" alt="Gestion App - K Agencia" />
