--- a/src/views/skills.html
+++ b/src/views/skills.html
@@ -3,30 +3,10 @@
   <div class="wrapper">
     <div class="skill">
       <div class="info">
-        <img src="../assets/img/java.svg" alt="Java - Daniel Morales" />
-      </div>
-      <h2 class="titulo-h2">Java</h2>
-    </div>
-    <div class="skill">
-      <div class="info">
-        <img
-          src="../assets/img/javascript.svg"
-          alt="Javascript - Daniel Morales"
-        />
+        <img src="../assets/img/javascript.svg" alt="Javascript - Daniel Morales" />
       </div>
       <div class="text">
         <h2 class="titulo-h2">Javascript</h2>
-      </div>
-    </div>
-    <div class="skill">
-      <div class="info">
-        <img
-          src="../assets/img/angular-icon.svg"
-          alt="Angular - Daniel Morales"
-        />
-      </div>
-      <div class="text">
-        <h2 class="titulo-h2">Angular</h2>
       </div>
     </div>
     <div class="skill">
@@ -35,6 +15,14 @@
       </div>
       <div class="text">
         <h2 class="titulo-h2">React</h2>
+      </div>
+    </div>
+    <div class="skill">
+      <div class="info">
+        <img src="../assets/img/sass.svg" alt="SASS - Daniel Morales" />
+      </div>
+      <div class="text">
+        <h2 class="titulo-h2">SASS</h2>
       </div>
     </div>
     <div class="skill">
@@ -63,10 +51,15 @@
     </div>
     <div class="skill">
       <div class="info">
-        <img
-          src="../assets/img/nodejs-icon.svg"
-          alt="NodeJS - Daniel Morales"
-        />
+        <img src="../assets/img/postgresql.svg" alt="PostgreSQL - Daniel Morales" />
+      </div>
+      <div class="text">
+        <h2 class="titulo-h2">PostgreSQL</h2>
+      </div>
+    </div>
+    <div class="skill">
+      <div class="info">
+        <img src="../assets/img/nodejs-icon.svg" alt="NodeJS - Daniel Morales" />
       </div>
       <div class="text">
         <h2 class="titulo-h2">NodeJS</h2>
@@ -74,26 +67,7 @@
     </div>
     <div class="skill">
       <div class="info">
-        <img src="../assets/img/oracle.svg" alt="Oracle - Daniel Morales" />
-      </div>
-      <div class="text">
-        <h2 class="titulo-h2">Oracle</h2>
-      </div>
-    </div>
-    <div class="skill">
-      <div class="info">
-        <img src="../assets/img/php.svg" alt="PHP - Daniel Morales" />
-      </div>
-      <div class="text">
-        <h2 class="titulo-h2">PHP</h2>
-      </div>
-    </div>
-    <div class="skill">
-      <div class="info">
-        <img
-          src="../assets/img/typescript-icon.svg"
-          alt="Typescript - Daniel Morales"
-        />
+        <img src="../assets/img/typescript-icon.svg" alt="Typescript - Daniel Morales" />
       </div>
       <div class="text">
         <h2 class="titulo-h2">Typescript</h2>
