feat: removed old projects, change description, update contact view

--- a/src/views/aboutme.html
+++ b/src/views/aboutme.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta
       name="keywords"
-      content="Desarrollo web, paginas web, backend, frontend, desarrollo de software, proyectos tecnologicos"
+      content="Desarrollo web, innovacion, liderazgo, MERN"
     />
     <meta
       name="description"
-      content="Soy desarrollador de software/web autodidacta, especializado en backend y con buenos conocimientos en fronted."
+      content="Soy desarrollador de software/web autodidacta, especializado en backend | Innovación | Liderazgo."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="INDEX, FOLLOW" />
-    <title>Daniel Morales - Desarrollo Web y soluciones a la medida</title>
+    <title>Daniel Morales - Desarrollo Web</title>
   </head>
   <body>
     <div>
@@ -51,12 +51,11 @@
     <div>
       <div>
         <h1>Daniel Morales</h1>
-        <h2>Desarrollador Web Jr.</h2>
+        <h2>Desarrollador Web</h2>
         <h3>Fullstack developer</h3>
-        <h3>Tecnologo en sistemas de información</h3>
-        <h3>21 Años</h3>
-        <h3>4 Años como desarrollador autodidacta</h3>
-        <h3>6 Meses de experiencia laboral</h3>
+        <h3>Estudiante ingenieria de sistemas</h3>
+        <h3>22 Años</h3>
+        <h3>+2 años de experiencia laboral</h3>
       </div>
     </div>
   </body>
