--- a/src/views/home.html
+++ b/src/views/home.html
@@ -11,12 +11,10 @@
     <h2 class="titulo-h2">Desarrollador Web Jr.</h2>
     <h3 class="titulo-h3">Fullstack developer</h3>
     <p>
-      Desarrollador web autodidacta, especializado en <b>backend </b>y con
-      conocimientos sólidos en <b>frontend.</b> Amante de las nuevas tecnologias
-      y todo lo geek. <br />
-      Llevo 4 años desarrollando proyectos personales aprendiendo de manera
-      autodidacta y 6 meses de experiencia laboral como desarrollador web
-      junior.
+      Desarrollador web, trabajando con tecnologias del stack MERN.</b> Amante de las nuevas tecnologias, todo lo geek y la Innovación<br />
+      Preparandome para ser un gran lider.<br/>
+      Soy estudiante de ultimos semestres de ingenieria de sistemas.<br/>
+      Tengo +2 años de experiencia laboral en software de recursos humanos, entre otros sistemas información diversos
     </p>
     <div class="redes-danielmorales">
       <a href="https://github.com/Se1juro" target="_BLANK"
