--- a/src/views/portfolio.html
+++ b/src/views/portfolio.html
@@ -44,43 +44,6 @@
     </div>
     <div class="project">
       <div class="project-info">
-        <img src="../assets/img/convertExcelToCsv.png" alt="Geeky Shop - tienda virtual" />
-        <h2 class="titulo-h2">Convert Excel to CSV APP</h2>
-        <p>
-          Herramienta que permite generar archivo CSV apartir de un Excel para
-          cargue de historias de usuarios y tareas a la aplicacion Yodiz
-        </p>
-      </div>
-      <div class="project-footer">
-        <p>Tecnología: Java SE 8, JavaFX</p>
-      </div>
-      <div class="project-capa">
-        <p>
-          <a href="https://github.com/Se1juro/convertExceltoCsv" target="_BLANK"><i class="fab fa-github"></i></a>
-        </p>
-      </div>
-    </div>
-    <div class="project">
-      <div class="project-info">
-        <img src="../assets/img/miniinstagram.jpeg" alt="Geeky Shop - tienda virtual" />
-        <h2 class="titulo-h2">Mini Instagram Uploader</h2>
-        <p>
-          Aplicacion web desarrollada en PHP 7 que clona la interfaz de
-          instagram y nos permite subir imagenes y verlas en el feed
-        </p>
-      </div>
-      <div class="project-footer">
-        <p>Tecnología: PHP7</p>
-      </div>
-      <div class="project-capa">
-        <p>
-          <a href="https://github.com/Se1juro/miniInstagramphp" target="_BLANK"><i class="fab fa-github"></i></a>
-          <a href="https://warm-refuge-15386.herokuapp.com/index.php" target="_BLANK"><i class="fas fa-eye"></i></a>
-        </p>
-      </div>
-    </div>
-    <div class="project">
-      <div class="project-info">
         <img src="../assets/img/Chat.png" alt="Chat simulación clase" />
         <h2 class="titulo-h2">Chat simulación clase en vivo</h2>
         <p>
@@ -134,44 +97,6 @@
     </div>
     <div class="project">
       <div class="project-info">
-        <img src="../assets/img/blog_php.png" alt="Gestion App - K Agencia" />
-        <h2 class="titulo-h2">Blog - PHP7</h2>
-        <p>
-          Pequeño blog desarrollado en PHP 7. Permite crear entradas, categorias, gestionarlas.
-          Cuenta con sistema de autenticación.
-        </p>
-      </div>
-      <div class="project-footer">
-        <p>Tecnología: Php 7, MySQL, Javascript, Css</p>
-      </div>
-      <div class="project-capa">
-        <p>
-          <a href="https://github.com/Se1juro/basic-blog-php" target="_BLANK"><i class="fab fa-github"></i></a>
-        </p>
-      </div>
-    </div>
-
-    <div class="project">
-      <div class="project-info">
-        <img src="../assets/img/ecommerce-php.png" alt="Gestion App - K Agencia" />
-        <h2 class="titulo-h2">ECommerce - PHP7</h2>
-        <p>
-          Ecommerce desarrollado en PHP 7. Sistema de carrito de compras, autenticacion, pedidos, gestion de productos y
-          categorias.
-        </p>
-      </div>
-      <div class="project-footer">
-        <p>Tecnología: Php 7, MySQL, Javascript, Css. Implementa MVC y POO</p>
-      </div>
-      <div class="project-capa">
-        <p>
-          <a href="https://github.com/Se1juro/little-ecommerce" target="_BLANK"><i class="fab fa-github"></i></a>
-        </p>
-      </div>
-    </div>
-
-    <div class="project">
-      <div class="project-info">
         <img src="../assets/img/404.png" alt="Error 404 - Html y CSS" />
         <h2 class="titulo-h2">404 Not Found - Página 404</h2>
         <p>
@@ -188,7 +113,6 @@
         </p>
       </div>
     </div>
-
     <div class="project">
       <div class="project-info">
         <img src="../assets/img/agenda.jpg" alt="Agenda de citas medicas remotas" />
@@ -204,6 +128,24 @@
       <div class="project-capa">
         <p>
           <a href="https://github.com/Se1juro/AgendaCitas" target="_BLANK"><i class="fab fa-github"></i></a>
+        </p>
+      </div>
+    </div>
+    <div class="project">
+      <div class="project-info">
+        <h2 class="titulo-h2">Arquitectura typescript para Rest API</h2>
+        <p>
+          Arquitectura para Rest API, basada en el patron repository e inyeccion de dependencias.<br/>
+          Se separa el codigo en capa de servicios, modelos, repositorios y controladores.<br/>
+          Se utiliza TypeOrm para las consultas y transacciones a BD, los controladores tienen validator que funcionan como un middleware para validar su informacion
+        </p>
+      </div>
+      <div class="project-footer">
+        <p>Tecnología: NodeJs, PostgreSQL, TypeScript, TypeOrm</p>
+      </div>
+      <div class="project-capa">
+        <p>
+          <a href="https://github.com/Se1juro/backend-hearmefy" target="_BLANK"><i class="fab fa-github"></i></a>
         </p>
       </div>
     </div>
