feat: remove some phrases from description

--- a/src/views/home.html
+++ b/src/views/home.html
@@ -8,8 +8,7 @@
   </div>
   <div class="informacion-danielmorales">
     <h1 class="titulo-h1">Daniel Morales</h1>
-    <h2 class="titulo-h2">Desarrollador Web Jr.</h2>
-    <h3 class="titulo-h3">Fullstack developer</h3>
+    <h2 class="titulo-h2">Desarrollador Web</h2>
     <p>
       Desarrollador web, trabajando con tecnologias del stack MERN.</b> Amante de las nuevas tecnologias, todo lo geek y la Innovación<br />
       Preparandome para ser un gran lider.<br/>
