--- a/main.css
+++ b/main.css
@@ -41,11 +41,24 @@
     justify-content: space-around;
     margin-right: 20px;
     margin-top: 20px;
+    width: 20em;
+    height: 20em;
+}
+.skill .info{
+    height: 15em;
+    display: flex;
+    align-items: center;
 }
 
 .skill img {
-    width: 10em;
+    width: 15em;
     flex-shrink: 2;
+}
+
+@media screen and (max-width: 859px) {
+    .skill img{
+        width: 10em !important;
+    }
 }
 .container-portfolio {
   padding-top: 50px;
@@ -84,6 +97,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  overflow: auto;
 }
 
 .project-info img {
@@ -243,7 +257,7 @@ header {
 }
 
 .show {
-  height: 23em !important;
+  height: 20em !important;
 }
 
 /* BODY MAIN CONTAINER GLOBALS*/
