use lint and prettier to format code

--- a/src/views/aboutme.html
+++ b/src/views/aboutme.html
@@ -1,62 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="keywords"
-      content="Desarrollo web, innovacion, liderazgo, MERN"
-    />
-    <meta
-      name="description"
-      content="Soy desarrollador de software/web autodidacta, especializado en backend | Innovación | Liderazgo."
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="INDEX, FOLLOW" />
-    <title>Daniel Morales - Desarrollo Web</title>
-  </head>
-  <body>
-    <div>
-      <header>
-        <nav>
-          <ul>
-            <li>
-              <a href="../index.html">Home</a>
-            </li>
-            <li>
-              <a href="./aboutme.html">Acerca de mi</a>
-            </li>
-            <li>
-              <a href="./services.html">Servicios</a>
-            </li>
-            <li>
-              <a href="./curriculum.html">Curriculum</a>
-            </li>
-            <li>
-              <a href="./portfolio.html">Portafolio</a>
-            </li>
-            <li>
-              <a href="./contact.html">Contacto</a>
-            </li>
-          </ul>
-        </nav>
-      </header>
-    </div>
-    <div>
-      <img
-        src="../assets/img/desarrolloweb.svg"
-        alt="Desarrollo web - Aplicaciones web a tu medida"
-      />
-    </div>
 
+<head>
+  <meta charset="UTF-8" />
+  <meta name="keywords" content="Desarrollo web, innovacion, liderazgo, MERN" />
+  <meta name="description"
+    content="Soy desarrollador de software/web autodidacta, especializado en backend | Innovación | Liderazgo." />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="INDEX, FOLLOW" />
+  <title>Daniel Morales - Desarrollo Web</title>
+</head>
+
+<body>
+  <div>
+    <header>
+      <nav>
+        <ul>
+          <li>
+            <a href="../index.html">Home</a>
+          </li>
+          <li>
+            <a href="./aboutme.html">Acerca de mi</a>
+          </li>
+          <li>
+            <a href="./services.html">Servicios</a>
+          </li>
+          <li>
+            <a href="./curriculum.html">Curriculum</a>
+          </li>
+          <li>
+            <a href="./portfolio.html">Portafolio</a>
+          </li>
+          <li>
+            <a href="./contact.html">Contacto</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+  </div>
+  <div>
+    <img src="../assets/img/desarrolloweb.svg" alt="Desarrollo web - Aplicaciones web a tu medida" />
+  </div>
+
+  <div>
     <div>
-      <div>
-        <h1>Daniel Morales</h1>
-        <h2>Desarrollador Web</h2>
-        <h3>Fullstack developer</h3>
-        <h3>Estudiante ingenieria de sistemas</h3>
-        <h3>22 Años</h3>
-        <h3>+2 años de experiencia laboral</h3>
-      </div>
+      <h1>Daniel Morales</h1>
+      <h2>Desarrollador Web</h2>
+      <h3>Fullstack developer</h3>
+      <h3>Estudiante ingenieria de sistemas</h3>
+      <h3>22 Años</h3>
+      <h3>+2 años de experiencia laboral</h3>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
