--- a/src/views/curriculum.html
+++ b/src/views/curriculum.html
@@ -2,11 +2,8 @@
   <div class="body-curriculum">
     <h1 class="titulo-h1">Curriculum</h1>
     <a href="../assets/docs/HV_DM.pdf" download>
-      <img
-        src="../assets/img/curriculum.svg"
-        alt="Curriculum, hoja de vida Daniel Morales"
-        title="Hoja de vida Daniel Morales"
-      />
+      <img src="../assets/img/curriculum.svg" alt="Curriculum, hoja de vida Daniel Morales"
+        title="Hoja de vida Daniel Morales" />
     </a>
 
     <h3 class="titulo-h3">Para descargar mi curriculum presiona la imagen</h3>
