--- a/src/views/home.html
+++ b/src/views/home.html
@@ -1,31 +1,22 @@
 <div class="container animate__animated animate__backInDown">
   <div class="img-danielmorales">
-    <img
-      src="../assets/img/danielmorales.png"
-      alt="Desarrollo web - Fullstack developer"
-      title="Desarrollador web"
-    />
+    <img src="../assets/img/danielmorales.png" alt="Desarrollo web - Fullstack developer" title="Desarrollador web" />
   </div>
   <div class="informacion-danielmorales">
     <h1 class="titulo-h1">Daniel Morales</h1>
     <h2 class="titulo-h2">Desarrollador Web</h2>
     <p>
-      Desarrollador web, trabajando con tecnologias del stack MERN.</b> Amante de las nuevas tecnologias, todo lo geek y la Innovación<br />
-      Preparandome para ser un gran lider.<br/>
-      Soy estudiante de ultimos semestres de ingenieria de sistemas.<br/>
+      Desarrollador web, trabajando con tecnologias del stack MERN.</b> Amante de las nuevas tecnologias, todo lo geek y
+      la Innovación<br />
+      Preparandome para ser un gran lider.<br />
+      Soy estudiante de ultimos semestres de ingenieria de sistemas.<br />
       Tengo +2 años de experiencia laboral en software de recursos humanos, entre otros sistemas información diversos
     </p>
     <div class="redes-danielmorales">
-      <a href="https://github.com/Se1juro" target="_BLANK"
-        ><img src="../assets/img/github_circle.svg" alt="Github Daniel Morales"
-      /></a>
-      <a
-        href="https://www.linkedin.com/in/daniel-morales-sevillano/"
-        target="_blank"
-        ><img
-          src="../assets/img/linkedin_circle.svg"
-          alt="Linkedin Daniel Morales"
-      /></a>
+      <a href="https://github.com/Se1juro" target="_BLANK"><img src="../assets/img/github_circle.svg"
+          alt="Github Daniel Morales" /></a>
+      <a href="https://www.linkedin.com/in/daniel-morales-sevillano/" target="_blank"><img
+          src="../assets/img/linkedin_circle.svg" alt="Linkedin Daniel Morales" /></a>
     </div>
   </div>
 </div>
