--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,8 +1,8 @@
-@import './curriculum.css';
-@import './skills.css';
-@import './portfolio.css';
-@import './notfound.css';
-@import './contact.css';
+@import "./curriculum.css";
+@import "./skills.css";
+@import "./portfolio.css";
+@import "./notfound.css";
+@import "./contact.css";
 * {
   padding: 0;
   margin: 0;
@@ -12,7 +12,7 @@
 body {
   background: #162521;
   color: #00b4d8;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 /* HEADER  */
