--- a/src/views/portfolio.html
+++ b/src/views/portfolio.html
@@ -135,9 +135,10 @@
       <div class="project-info">
         <h2 class="titulo-h2">Arquitectura typescript para Rest API</h2>
         <p>
-          Arquitectura para Rest API, basada en el patron repository e inyeccion de dependencias.<br/>
-          Se separa el codigo en capa de servicios, modelos, repositorios y controladores.<br/>
-          Se utiliza TypeOrm para las consultas y transacciones a BD, los controladores tienen validator que funcionan como un middleware para validar su informacion
+          Arquitectura para Rest API, basada en el patron repository e inyeccion de dependencias.<br />
+          Se separa el codigo en capa de servicios, modelos, repositorios y controladores.<br />
+          Se utiliza TypeOrm para las consultas y transacciones a BD, los controladores tienen validator que funcionan
+          como un middleware para validar su informacion
         </p>
       </div>
       <div class="project-footer">
